# logtempFS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/logtempfs/: __init__.py  decision.py  mem.py  protocol.py  real.py
tests/: basic_tests.py  test_basic.py
