[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logtempfs"
version = "0.1.1"
description = "Temporary filesystem abstraction for large support-log / SNAP style archives"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Roberto Etcheverry" },
]
dependencies = [
    "D-MemFS>=0.4.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-psutil",
]

[tool.hatch.build.targets.wheel]
packages = ["src/logtempfs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
